57 handle url constructor deprecation (#58)
Removed URL constructors